# AutoParts

./: .gitignore  Cargo.toml  app.db  app.db-shm  app.db-wal
src/: config.rs  main.rs
src/controllers/: mod.rs
src/entities/: alter_names.rs  buy_history.rs  car_brands.rs  car_series.rs  cars.rs  credit_book.rs  credit_payments.rs  fourni.rs  item_car.rs  item_feedback.rs  item_order.rs  items.rs  mod.rs  order_credit.rs  orders.rs  part_brands.rs  part_names.rs  part_wishes.rs  place_history.rs  place_item.rs  place_locations.rs  places.rs  prelude.rs  users.rs
src/macros/: Cargo.toml
src/macros/src/: lib.rs
src/tests/: mod.rs
