[package]
name = "AutoParts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.15"
actix-rt = "2.5.0"
sqlx = {version = "0.5.9", features= ["runtime-actix-native-tls","sqlite"]}
jsonwebtoken = "8.0.0-beta.7"
