[package]
name = "AutoParts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.18"
actix-rt = "2.5.0"
jsonwebtoken = "8.0.0-beta.7"
serde = "1.0.132"
serde_json = "1.0.73"
sea-orm = {version = "0.5.0", features = ["sqlx-sqlite","runtime-actix-native-tls","macros"], default-features=false}
async-graphql = {version = "3.0.19", features = ["dataloader","log"]}
async-graphql-actix-web = "3.0.19"
itertools = "0.10.3"
